# r2b_safety_lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: FAQ.md  compile-ft-scservo.md  lerobot-commands.md  progress-report-q1.md  stating-up.md
docs/hardware/SO-ARM101/: so-arm101-print-plate.3mf
docs/hardware/ps4/: README.md
docs/hardware/ps4/v1/: Base.stl  Holder_a.stl  Holder_a_+_b.stl  Holder_b.stl  PS4_Camera_Mount.STL  PS4_Camera_Mount_Peg.STL  PS4_Camera_Mount_Slot.STL
docs/hardware/ps4/v2/: camera-hold-base.stl  camera-hold-extension.stl  camera-hold-head.stl
docs/hardware/ps4/v3/: base-alone.stl  extender-1.stl  extender-2.stl  extender-3.stl
docs/runpod/: scratchpad.md
pipelines/local/: eval.sh  pyenv.md
pipelines/runpod/: .localrc  README.md  build.sh  config.env  init.sh  timeout.sh  train.sh
playground/: main.py  notebook.ipynb  ps4eye-lerobot.py  scratchpad.md  scratchpad.py  so-arm-101-001.py  so-arm-101-002.py
playground/artifacts/: scene_001.xml  so101_table.xml  workbench_scene.xml
playground/gemma/: Untitled.ipynb
playground/gemma/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
playground/kinematics/: so101_forward_kinematics.py  test.py
playground/notebooks/: dataset-trials.ipynb  rewrite-parquet.ipynb  test-cameras.ipynb
playground/scripts/: lerobot-eval.py  ps4-firmware-update.py  ps4-view.py  reset-robot.py  stereo2left-right.sh
playground/thor-test/: Untitled.ipynb  main.py
playground/thor-test/.ipynb_checkpoints/: web-checkpoint.py
playground/tutorials/depth_estimation/: 01_demo_stereo_engine.py  02_demo_vanilla_estimator.py  demo_obj_depth.py  demo_stereo.py  script_001.py
playground/tutorials/gym/: gym-001.py  gym-002.py  gym-003.py  gym-004.py
playground/tutorials/manual/: README.md  cli-calibration.py  cli.py  ping.py
playground/tutorials/so-arm101/: gym001.py  gym002_native_viewer.py
playground/tutorials/teleop/: flask_teleop.py  simple-teleoperation.py  teleop-rerun.py
playground/tutorials/teleop/templates/: index.html
scripts/: .localrc  build-training.sh  build.sh  init.sh  runpod_train.sh  setup_lerobot_runpod.sh
src/r2b/: __init__.py
src/r2b/depth/: __init__.py  stereo_engine.py  types.py
src/r2b/depth/assets/: param_K.npy  param_dist.npy  param_ret.npy
src/r2b/depth/vanilla/: __init__.py  config.py  estimator.py  projector.py
src/r2b/logger/: __init__.py  core.py  handlers.py
src/r2b/video/: __init__.py  contants.py  interface.py
src/r2b/video/ps4/: __init__.py  firmware.py  stereo.py
tests/: error-log.md  teleop.sh
