[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r2b"
version = "0.1.0"
description = "Research to Blog (r2b): Safety Lab Tools"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["research", "blog", "tools"]
authors = [
  { name = "Rafael Felix", email = "rafaelfelix@google.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rich",
  "python-dotenv",
  "ffmpeg~=1.4",
  "colorama~=0.4.6",
  "lerobot~=0.4.2"
]

[project.optional-dependencies]
train = [
  "transformers>=4.30.0",
  "datasets>=2.0.0",
  "accelerate>=0.20.0",
  "peft>=0.4.0",
  "trl>=0.5.0",
  "wandb>=0.15.0",
]

[project.urls]
Documentation = "https://github.com/r2b-safety-lab/r2b#readme"
Issues = "https://github.com/r2b-safety-lab/r2b/issues"
Source = "https://github.com/r2b-safety-lab/r2b"

[tool.hatch.build.targets.wheel]
packages = ["src/r2b"]
